Trust Prompt: Can fail to extract host from a collection account
I start creating an account for a misconfigured server. Evolution shows as error message
SSL certificate for “xxx@yyy.zzz” is not trusted.
Reason: The certificate does not match the expected identity of the site that it was retrieved from.
and a button “View Certificate”. When I click on the “View certificate” button, the error message disappears, but no certificate is shown.