I#247 - Trust Prompt: Can fail to extract host from a collection account

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/247